[package]
name = "blockchain-light-node"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio       = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest     = { version = "0.11", features = ["json", "gzip"] }
scraper     = "0.14"
clap        = { version = "4", features = ["derive"] }
anyhow      = "1.0"
url = "2.5.4"
